@startuml
left to right direction

class Player

class Weapon

interface Powerup

class Game

class Server

class Client

class Pistol

class Knife

class Chaingun

class Machinegun

class Food

class Medkit

class Ammo

class MachinegunDrop

class ChaingunDrop

class Key

class Treasure

class GameMap

class  Drawable

Player --> Weapon

Server --> Game: "List of games"

Game --> Client: "List of clients"

Game --> Player
GameMap --> Powerup
Game --> Weapon

Client --+ Game: "Sends data"

Weapon --|> Drawable
Powerup --|> Drawable
Player --|> Drawable

Game o-- GameMap

class Structure /'Walls, barrels, etc.'/

GameMap o-- Structure

Server *-- Socket
Client *-- Socket
@enduml